# Match

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: API.md  ER diagram.xml  Schema diagram.xml
frontend/: README.md  package-lock.json  package.json
frontend/config/: index.js
frontend/src/: index.ejs  sign_up.html
frontend/src/main/: index.js
frontend/src/renderer/: App.vue  frame.vue  main.js
frontend/src/renderer/assets/js/: cookies.js
frontend/src/renderer/components/: Sidebar.vue  feellucky.vue  game.vue  gamedetail.vue  gamelist.vue  login.vue  navigation.vue  page.vue  self.js  wishlist.vue
frontend/src/renderer/router/: index.js
py/: spider.py
sql/: Dockerfile  create.sql  docker-compose.yml  init_db.sh
src/: api.rs  infos.rs  main.rs  models.rs  schema.rs  utils.rs
