[package]
name = "Match"
version = "0.1.0"
authors = ["Ruihang Xia <waynestxia@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.3"
actix-session = "0.1.1"
diesel = { version = "1.4.2", features = ["sqlite", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.14.0"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"
